--- a/Android/气泡效果.md
+++ b/Android/气泡效果.md
@@ -380,3 +380,443 @@ class MainActivity : AppCompatActivity() {
 4. **内存管理**：及时释放不需要的资源
 
 这个实现方案可以让你在RecyclerView中点击图片时显示气泡，并且气泡会跟随RecyclerView的滚动而移动。你可以根据具体需求调整气泡的样式和显示逻辑。
+
+# Java实现
+
+*Thinking...*
+
+> 用户想要Java版本的实现，并且特别强调要防止空指针、内存泄漏和ANR问题。我需要：
+> 
+> 1. 将Kotlin代码转换为Java
+> 2. 添加必要的空指针检查
+> 3. 处理内存泄漏问题（特别是在RecyclerView的ScrollListener和点击监听器中）
+> 4. 避免ANR（确保不在主线程做耗时操作）
+> 5. 正确处理生命周期
+
+我来提供Java版本的实现，并特别注意防止空指针、内存泄漏和ANR问题。
+
+## Java实现方案
+
+### 1. 主Activity实现
+
+```java
+public class MainActivity extends AppCompatActivity {
+    
+    private RecyclerView recyclerView;
+    private BubblePopupManager bubbleManager;
+    private MyAdapter adapter;
+    private RecyclerView.OnScrollListener scrollListener;
+    
+    @Override
+    protected void onCreate(Bundle savedInstanceState) {
+        super.onCreate(savedInstanceState);
+        setContentView(R.layout.activity_main);
+        
+        initViews();
+        setupRecyclerView();
+    }
+    
+    private void initViews() {
+        recyclerView = findViewById(R.id.recyclerView);
+        if (recyclerView == null) {
+            throw new IllegalStateException("RecyclerView not found in layout");
+        }
+        
+        bubbleManager = new BubblePopupManager(this);
+    }
+    
+    private void setupRecyclerView() {
+        recyclerView.setLayoutManager(new LinearLayoutManager(this));
+        
+        adapter = new MyAdapter(new MyAdapter.OnImageClickListener() {
+            @Override
+            public void onImageClick(View view, int position) {
+                if (view != null && !isFinishing() && !isDestroyed()) {
+                    bubbleManager.showBubble(view, "点击了第 " + position + " 项");
+                }
+            }
+        });
+        
+        recyclerView.setAdapter(adapter);
+        
+        // 创建滚动监听器
+        scrollListener = new RecyclerView.OnScrollListener() {
+            @Override
+            public void onScrolled(@NonNull RecyclerView recyclerView, int dx, int dy) {
+                super.onScrolled(recyclerView, dx, dy);
+                if (bubbleManager != null) {
+                    bubbleManager.updatePosition();
+                }
+            }
+        };
+        
+        recyclerView.addOnScrollListener(scrollListener);
+    }
+    
+    @Override
+    protected void onDestroy() {
+        super.onDestroy();
+        
+        // 清理资源，防止内存泄漏
+        if (recyclerView != null && scrollListener != null) {
+            recyclerView.removeOnScrollListener(scrollListener);
+        }
+        
+        if (bubbleManager != null) {
+            bubbleManager.dismiss();
+            bubbleManager.release();
+        }
+        
+        if (adapter != null) {
+            adapter.release();
+        }
+    }
+    
+    @Override
+    public void onBackPressed() {
+        if (bubbleManager != null && bubbleManager.isShowing()) {
+            bubbleManager.dismiss();
+        } else {
+            super.onBackPressed();
+        }
+    }
+}
+```
+
+### 2. BubblePopupManager类
+
+```java
+public class BubblePopupManager {
+    
+    private PopupWindow popupWindow;
+    private View bubbleView;
+    private TextView tvBubbleContent;
+    private WeakReference<View> currentAnchorRef;
+    private Context context;
+    private Handler mainHandler;
+    
+    public BubblePopupManager(@NonNull Context context) {
+        this.context = context.getApplicationContext(); // 使用Application Context避免内存泄漏
+        this.mainHandler = new Handler(Looper.getMainLooper());
+        initBubbleView();
+    }
+    
+    private void initBubbleView() {
+        if (context == null) {
+            return;
+        }
+        
+        try {
+            LayoutInflater inflater = LayoutInflater.from(context);
+            bubbleView = inflater.inflate(R.layout.bubble_view, null);
+            
+            if (bubbleView != null) {
+                tvBubbleContent = bubbleView.findViewById(R.id.tvBubbleContent);
+            }
+        } catch (Exception e) {
+            Log.e("BubblePopupManager", "Error inflating bubble view", e);
+        }
+    }
+    
+    public void showBubble(@NonNull final View anchorView, @NonNull final String text) {
+        if (anchorView == null || text == null || bubbleView == null) {
+            return;
+        }
+        
+        // 确保在主线程执行
+        if (Looper.myLooper() != Looper.getMainLooper()) {
+            mainHandler.post(new Runnable() {
+                @Override
+                public void run() {
+                    showBubble(anchorView, text);
+                }
+            });
+            return;
+        }
+        
+        try {
+            // 更新气泡内容
+            if (tvBubbleContent != null) {
+                tvBubbleContent.setText(text);
+            }
+            
+            // 测量气泡大小
+            bubbleView.measure(
+                View.MeasureSpec.makeMeasureSpec(0, View.MeasureSpec.UNSPECIFIED),
+                View.MeasureSpec.makeMeasureSpec(0, View.MeasureSpec.UNSPECIFIED)
+            );
+            
+            // 创建或更新PopupWindow
+            if (popupWindow == null) {
+                createPopupWindow();
+            }
+            
+            // 保存anchor视图的弱引用
+            currentAnchorRef = new WeakReference<>(anchorView);
+            
+            // 计算偏移量
+            int bubbleWidth = bubbleView.getMeasuredWidth();
+            int bubbleHeight = bubbleView.getMeasuredHeight();
+            int xOffset = (anchorView.getWidth() - bubbleWidth) / 2;
+            int yOffset = -(bubbleHeight + dpToPx(10)); // 10dp间距
+            
+            // 确保anchor视图仍然附着在窗口上
+            if (anchorView.getWindowToken() != null) {
+                popupWindow.showAsDropDown(anchorView, xOffset, yOffset);
+            }
+            
+        } catch (Exception e) {
+            Log.e("BubblePopupManager", "Error showing bubble", e);
+        }
+    }
+    
+    private void createPopupWindow() {
+        if (bubbleView == null) {
+            return;
+        }
+        
+        popupWindow = new PopupWindow(
+            bubbleView,
+            ViewGroup.LayoutParams.WRAP_CONTENT,
+            ViewGroup.LayoutParams.WRAP_CONTENT,
+            true
+        );
+        
+        popupWindow.setOutsideTouchable(true);
+        popupWindow.setBackgroundDrawable(new ColorDrawable(Color.TRANSPARENT));
+        
+        // 设置动画
+        popupWindow.setAnimationStyle(android.R.style.Animation_Dialog);
+        
+        // 设置dismiss监听器
+        popupWindow.setOnDismissListener(new PopupWindow.OnDismissListener() {
+            @Override
+            public void onDismiss() {
+                currentAnchorRef = null;
+            }
+        });
+    }
+    
+    public void updatePosition() {
+        if (currentAnchorRef == null) {
+            return;
+        }
+        
+        View anchor = currentAnchorRef.get();
+        if (anchor == null || popupWindow == null || !popupWindow.isShowing()) {
+            return;
+        }
+        
+        // 检查anchor视图是否仍然在窗口中
+        if (anchor.getWindowToken() == null) {
+            dismiss();
+            return;
+        }
+        
+        try {
+            int bubbleWidth = bubbleView.getMeasuredWidth();
+            int bubbleHeight = bubbleView.getMeasuredHeight();
+            int xOffset = (anchor.getWidth() - bubbleWidth) / 2;
+            int yOffset = -(bubbleHeight + dpToPx(10));
+            
+            popupWindow.update(anchor, xOffset, yOffset, -1, -1);
+        } catch (Exception e) {
+            Log.e("BubblePopupManager", "Error updating position", e);
+        }
+    }
+    
+    public void dismiss() {
+        try {
+            if (popupWindow != null && popupWindow.isShowing()) {
+                popupWindow.dismiss();
+            }
+        } catch (Exception e) {
+            Log.e("BubblePopupManager", "Error dismissing popup", e);
+        } finally {
+            currentAnchorRef = null;
+        }
+    }
+    
+    public boolean isShowing() {
+        return popupWindow != null && popupWindow.isShowing();
+    }
+    
+    public void release() {
+        dismiss();
+        
+        if (popupWindow != null) {
+            popupWindow.setOnDismissListener(null);
+            popupWindow = null;
+        }
+        
+        bubbleView = null;
+        tvBubbleContent = null;
+        currentAnchorRef = null;
+        context = null;
+        mainHandler = null;
+    }
+    
+    private int dpToPx(int dp) {
+        if (context == null) {
+            return dp;
+        }
+        
+        float density = context.getResources().getDisplayMetrics().density;
+        return Math.round(dp * density);
+    }
+}
+```
+
+### 3. RecyclerView Adapter
+
+```java
+public class MyAdapter extends RecyclerView.Adapter<MyAdapter.ViewHolder> {
+    
+    private List<String> items;
+    private WeakReference<OnImageClickListener> listenerRef;
+    
+    public interface OnImageClickListener {
+        void onImageClick(View view, int position);
+    }
+    
+    public MyAdapter(@NonNull OnImageClickListener listener) {
+        this.listenerRef = new WeakReference<>(listener);
+        this.items = new ArrayList<>();
+        
+        // 初始化数据
+        for (int i = 0; i < 50; i++) {
+            items.add("Item " + (i + 1));
+        }
+    }
+    
+    @NonNull
+    @Override
+    public ViewHolder onCreateViewHolder(@NonNull ViewGroup parent, int viewType) {
+        View view = LayoutInflater.from(parent.getContext())
+                .inflate(R.layout.item_layout, parent, false);
+        return new ViewHolder(view);
+    }
+    
+    @Override
+    public void onBindViewHolder(@NonNull ViewHolder holder, int position) {
+        if (position < 0 || position >= items.size()) {
+            return;
+        }
+        
+        String item = items.get(position);
+        if (item != null && holder.titleView != null) {
+            holder.titleView.setText(item);
+        }
+        
+        // 使用ViewHolder的位置，避免position变化导致的问题
+        final int adapterPosition = holder.getAdapterPosition();
+        
+        if (holder.imageView != null) {
+            holder.imageView.setOnClickListener(new View.OnClickListener() {
+                @Override
+                public void onClick(View v) {
+                    OnImageClickListener listener = listenerRef != null ? listenerRef.get() : null;
+                    if (listener != null && adapterPosition != RecyclerView.NO_POSITION) {
+                        listener.onImageClick(v, adapterPosition);
+                    }
+                }
+            });
+        }
+    }
+    
+    @Override
+    public int getItemCount() {
+        return items != null ? items.size() : 0;
+    }
+    
+    @Override
+    public void onViewRecycled(@NonNull ViewHolder holder) {
+        super.onViewRecycled(holder);
+        // 清理点击监听器，避免内存泄漏
+        if (holder.imageView != null) {
+            holder.imageView.setOnClickListener(null);
+        }
+    }
+    
+    public void release() {
+        if (items != null) {
+            items.clear();
+            items = null;
+        }
+        
+        if (listenerRef != null) {
+            listenerRef.clear();
+            listenerRef = null;
+        }
+    }
+    
+    static class ViewHolder extends RecyclerView.ViewHolder {
+        ImageView imageView;
+        TextView titleView;
+        
+        ViewHolder(@NonNull View view) {
+            super(view);
+            imageView = view.findViewById(R.id.ivClickable);
+            titleView = view.findViewById(R.id.tvTitle);
+        }
+    }
+}
+```
+
+### 4. 布局文件 activity_main.xml
+
+```xml
+<?xml version="1.0" encoding="utf-8"?>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:padding="8dp" />
+        
+</FrameLayout>
+```
+
+### 5. 使用建议和注意事项
+
+#### 防止空指针异常：
+1. 所有可能为null的对象都进行了检查
+2. 使用`@NonNull`和`@Nullable`注解
+3. 在使用前检查View的有效性
+
+#### 防止内存泄漏：
+1. 使用`WeakReference`保存View引用
+2. 使用Application Context而非Activity Context
+3. 在`onDestroy`中清理所有资源
+4. 在`onViewRecycled`中清理点击监听器
+
+#### 防止ANR：
+1. 使用Handler确保UI操作在主线程执行
+2. 避免在主线程进行耗时操作
+3. 使用try-catch处理可能的异常
+
+#### 额外的优化建议：
+
+```java
+// 在Application类中添加全局异常处理
+public class MyApplication extends Application {
+    @Override
+    public void onCreate() {
+        super.onCreate();
+        
+        Thread.setDefaultUncaughtExceptionHandler(new Thread.UncaughtExceptionHandler() {
+            @Override
+            public void uncaughtException(Thread t, Throwable e) {
+                Log.e("MyApplication", "Uncaught exception", e);
+                // 处理异常，避免应用崩溃
+            }
+        });
+    }
+}
+```
+
+这个Java实现充分考虑了Android开发中的常见问题，通过合理的空指针检查、资源管理和线程处理，可以有效避免空指针异常、内存泄漏和ANR问题。
