更新 弱引用.md

--- a/Java/弱引用.md
+++ b/Java/弱引用.md
@@ -292,3 +292,6 @@ public class WeakHashMapDemo {
 - 弱引用允许 GC 在没有强引用时尽快回收对象，常用于“可丢弃”的缓存、不会延长寿命的键或监听器等场景。
 - 使用时通过 WeakReference.get() 访问，需处理可能为 null 的情况；更复杂的场景建议配合 ReferenceQueue 或使用 WeakHashMap。
 - 若不使用弱引用（而用强引用）持有这类“非所有权”的对象，可能导致内存泄漏、对象寿命被不合理延长，最终引发内存压力与 OOM 风险。
+
+
+# 如果使用弱引用，暂时没有使用该对象，下次使用时是否会发生对象已经被GC回收，再也无法使用该对象的问题？
