更新 弱引用.md

--- a/Java/弱引用.md
+++ b/Java/弱引用.md
@@ -295,3 +295,30 @@ public class WeakHashMapDemo {
 
 
 # 如果使用弱引用，暂时没有使用该对象，下次使用时是否会发生对象已经被GC回收，再也无法使用该对象的问题？
+
+简短回答：会的。弱引用不会阻止对象被回收；当只剩弱引用指向某对象时，它在下一次 GC 就可能被回收。下次你通过 WeakReference.get() 获取时可能返回 null，这意味着对象已被回收，无法直接继续使用，通常需要重建该对象。
+
+详细说明
+- 语义：WeakReference.get() 不是稳定的。任何一次 GC 都可能让它从非空变为 null。
+- 适用前提：只有当对象是“可丢弃、可重建、命中即赚、未命中就重建”的数据时才用弱引用，比如缓存条目、解析结果、图片等。
+- 使用模式：
+  - 访问时先取：T obj = ref.get();
+  - 判空：如果 obj == null，则重建对象，再更新弱引用或缓存结构。
+- 反例：不能用弱引用保存必须持续可用、重建代价极高且不可丢失的业务关键对象。此类对象应由强引用（或受控的缓存策略）持有。
+
+常见做法
+- 缓存
+  - 简单弱值缓存：Map<K, WeakReference<V>>。get 时如果 ref 为 null 或 ref.get() 为 null，就 computeIfAbsent 重建。
+  - 更可靠的选择：使用 Caffeine/Guava Cache，支持基于大小/时间的逐出，并可配置弱/软引用，更可控。
+- 监听器/附属数据
+  - 当你只是想“不要延长对方寿命”时，用弱引用作为键（WeakHashMap）或包裹监听器；被回收后自动移除。
+- 线程局部
+  - ThreadLocal 的 key 类似弱引用语义，但仍要调用 remove 避免 value 残留。
+
+如果你“不想丢”
+- 用强引用：把对象放在明确生命周期的组件里（例如单例、作用域容器、服务层字段）。
+- 用软引用：在内存紧张时才回收，比弱引用更“保守”；但仍可能被回收，不能保证不丢。
+- 用受控缓存：基于容量/LRU 的缓存比弱/软引用更可预测。Caffeine 支持最大大小、WTinyLFU 等策略，命中率与可控性更佳。
+
+结论
+- 使用弱引用就要接受对象可能在任何 GC 后消失的事实。需要时应当检测为 null 并重建；若对象必须持续可用，就不该用弱引用来持有它。
